- BRSTUDIO-80 - added remove file / video end point - restructured files and folders
