# src/configs/types/file-upload.go
@@ -18,3 +18,7 @@ type FileCompressJson struct {
 	OutputFormat  *string               `form:"outputFormat" default:"mp4"`
 	File          *multipart.FileHeader `form:"file" binding:"required" swaggerignore:"true"`
 }
+
+type FileDeleteJson struct {
+	MountPathWithName string `form:"mountPathWithName" binding:"required"`
+}
